Fix: Resolve menu visibility issue caused by GSAP animation conflicts

--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@
         renderMenu('breakfast');
 
         // Scroll Animations for Section Headers
-        document.querySelectorAll('.section-header, .text-center').forEach(header => {
+        document.querySelectorAll('.section-header, p.text-text-gray.text-base.max-w-\\[600px\\]').forEach(header => {
             gsap.from(header, {
                 scrollTrigger: {
                     trigger: header,
