Polish: Update footer contact info and ensure consistent logo usage in menu page

--- a/index.html
+++ b/index.html
@@ -834,11 +834,12 @@
             <div>
                 <h4 class="text-lg font-bold mb-6">Contact Us</h4>
                 <ul class="space-y-4 text-sm text-[#aaa]">
-                    <li class="flex items-center gap-3"><i data-lucide="phone" class="w-4 h-4"></i> +1 (234) 567-890
+                    <li class="flex items-center gap-3"><i data-lucide="phone" class="w-4 h-4"></i> +263 XX XXX XXXX
                     </li>
-                    <li class="flex items-center gap-3"><i data-lucide="mail" class="w-4 h-4"></i> hello@fode.com</li>
-                    <li class="flex items-center gap-3"><i data-lucide="map-pin" class="w-4 h-4"></i> 123 Food Street,
-                        NY</li>
+                    <li class="flex items-center gap-3"><i data-lucide="mail" class="w-4 h-4"></i> info@fairycafe.co.zw
+                    </li>
+                    <li class="flex items-center gap-3"><i data-lucide="map-pin" class="w-4 h-4"></i> Joina City,
+                        Bulawayo</li>
                 </ul>
             </div>
         </div>
