--- a/menu.html
+++ b/menu.html
@@ -89,8 +89,8 @@
     <!-- Navigation Overlay -->
     <nav
         class="fixed top-0 left-0 w-full z-50 bg-white/80 backdrop-blur-md border-b border-gray-100 px-6 py-4 md:px-16 flex justify-between items-center">
-        <div class="flex items-center text-2xl font-bold text-text-dark">
-            Fairy Cafe<span class="text-primary-yellow">.</span>
+        <div class="flex items-center">
+            <img src="logo.png" alt="Fairy Cafe Logo" class="h-10 w-auto object-contain">
         </div>
         <a href="index.html"
             class="flex items-center gap-2 text-sm font-medium hover:text-primary-yellow transition-colors group">
