Style: Make Sign In button white with black text

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <!-- Auth Buttons -->
         <div class="flex gap-5">
             <button
-                class="px-6 py-2.5 rounded-full text-sm font-medium border border-text-dark/20 hover:border-text-dark hover:bg-white transition-all">Sign
+                class="px-6 py-2.5 rounded-full text-sm font-medium border border-text-dark bg-white text-text-dark hover:bg-bg-light transition-all">Sign
                 In</button>
             <button
                 class="px-6 py-2.5 rounded-full text-sm font-medium bg-primary-yellow text-white shadow-[0_5px_15px_rgba(29,105,27,0.4)] hover:-translate-y-0.5 hover:shadow-[0_8px_18px_rgba(29,105,27,0.6)] transition-all">Login</button>
