--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
                     </span>
                     <br> From the <span class="italic font-light text-text-dark">Grill.</span>
                 </h1>
-                <p class="text-text-dark text-lg md:text-xl max-w-md leading-relaxed mb-8 drop-shadow-md">
-                    <span class="text-primary-yellow font-medium">Skip</span> the line at Fairy Cafe. Pre-order your
+                <p class="text-text-dark text-lg md:text-xl font-semibold max-w-md leading-relaxed mb-8 drop-shadow-md">
+                    <span class="text-primary-yellow font-bold">Skip</span> the line at Fairy Cafe. Pre-order your
                     favorites and pick them up hot and ready.
                 </p>
 
