UI: Update hero background image

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <!-- Hero Section -->
     <main class="h-screen relative flex overflow-hidden"
-        style="background-image: url('hero-bg.jpeg'); background-size: cover; background-position: center;">
+        style="background-image: url('hero-background.jpeg'); background-size: cover; background-position: center;">
 
 
         <!-- Left Section -->
