--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
                         </div>
                         <div>
                             <div class="font-semibold text-text-dark mb-1">Address</div>
-                            <div class="text-text-gray">Joina City, Bulawayo<br>Zimbabwe</div>
+                            <div class="text-text-gray">168 Robert Mugabe Way, Bulawayo<br>Zimbabwe</div>
                         </div>
                     </div>
                     <div class="flex items-start gap-4">
@@ -838,7 +838,8 @@
                     </li>
                     <li class="flex items-center gap-3"><i data-lucide="mail" class="w-4 h-4"></i> info@fairycafe.co.zw
                     </li>
-                    <li class="flex items-center gap-3"><i data-lucide="map-pin" class="w-4 h-4"></i> Joina City,
+                    <li class="flex items-center gap-3"><i data-lucide="map-pin" class="w-4 h-4"></i> 168 Robert Mugabe
+                        Way,
                         Bulawayo</li>
                 </ul>
             </div>
