UI: Highlight 'the line' in green in hero description

--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
                     <br> From the <span class="italic font-light text-text-dark">Grill.</span>
                 </h1>
                 <p class="text-text-dark text-lg md:text-xl font-semibold max-w-md leading-relaxed mb-8 drop-shadow-md">
-                    <span class="text-primary-yellow font-bold">Skip</span> the line at Fairy Cafe. Pre-order your
+                    <span class="text-primary-yellow font-bold">Skip</span> <span
+                        class="text-primary-yellow font-bold">the line</span> at Fairy Cafe. Pre-order your
                     favorites and pick them up hot and ready.
                 </p>
 
