--- a/menu.html
+++ b/menu.html
@@ -135,11 +135,62 @@
     </main>
 
     <!-- Footer -->
-    <footer class="bg-bg-dark text-white py-12 px-6 md:px-16 text-center">
-        <div class="text-2xl font-bold mb-6 italic">Fairy Cafe<span class="text-primary-yellow">.</span></div>
-        <p class="text-gray-400 text-sm italic mb-8">Fairy Cafe Bulawayo - Taste the Magic</p>
-        <div class="pt-8 border-t border-white/5 text-gray-500 text-xs">
-            &copy; 2026 Fairy Cafe. All rights reserved.
+    <footer class="bg-bg-dark text-white pt-20 pb-10 px-6 md:px-16 text-left">
+        <div class="grid grid-cols-1 md:grid-cols-4 gap-12 max-w-[1200px] mx-auto mb-16 text-left">
+            <div class="col-span-1">
+                <div class="text-3xl font-bold mb-6 italic">Fairy Cafe<span class="text-primary-yellow">.</span></div>
+                <p class="text-[14px] text-[#aaa] leading-7 mb-6">Delicious food delivered to your door. Experience the
+                    best flavors in town with Fairy Cafe.</p>
+                <div class="flex gap-4">
+                    <a href="#"
+                        class="w-10 h-10 bg-white/5 rounded-full flex justify-center items-center text-white hover:bg-primary-yellow hover:text-text-dark hover:-translate-y-1 transition-all"><i
+                            data-lucide="facebook" class="w-5 h-5"></i></a>
+                    <a href="#"
+                        class="w-10 h-10 bg-white/5 rounded-full flex justify-center items-center text-white hover:bg-primary-yellow hover:text-text-dark hover:-translate-y-1 transition-all"><i
+                            data-lucide="twitter" class="w-5 h-5"></i></a>
+                    <a href="#"
+                        class="w-10 h-10 bg-white/5 rounded-full flex justify-center items-center text-white hover:bg-primary-yellow hover:text-text-dark hover:-translate-y-1 transition-all"><i
+                            data-lucide="instagram" class="w-5 h-5"></i></a>
+                </div>
+            </div>
+
+            <div>
+                <h4 class="text-lg font-bold mb-6">Quick Links</h4>
+                <ul class="space-y-4 text-sm text-[#aaa]">
+                    <li><a href="index.html" class="hover:text-primary-yellow hover:pl-1 transition-all">Home</a></li>
+                    <li><a href="menu.html" class="hover:text-primary-yellow hover:pl-1 transition-all">Our Menu</a>
+                    </li>
+                    <li><a href="index.html#about-section"
+                            class="hover:text-primary-yellow hover:pl-1 transition-all">About Us</a></li>
+                    <li><a href="#" class="hover:text-primary-yellow hover:pl-1 transition-all">Contact</a></li>
+                </ul>
+            </div>
+
+            <div>
+                <h4 class="text-lg font-bold mb-6">Services</h4>
+                <ul class="space-y-4 text-sm text-[#aaa]">
+                    <li><a href="#" class="hover:text-primary-yellow hover:pl-1 transition-all">Online Ordering</a></li>
+                    <li><a href="#" class="hover:text-primary-yellow hover:pl-1 transition-all">Table Booking</a></li>
+                    <li><a href="#" class="hover:text-primary-yellow hover:pl-1 transition-all">Catering</a></li>
+                    <li><a href="#" class="hover:text-primary-yellow hover:pl-1 transition-all">Gift Cards</a></li>
+                </ul>
+            </div>
+
+            <div>
+                <h4 class="text-lg font-bold mb-6">Contact Us</h4>
+                <ul class="space-y-4 text-sm text-[#aaa]">
+                    <li class="flex items-center gap-3"><i data-lucide="phone" class="w-4 h-4"></i> +263 XX XXX XXXX
+                    </li>
+                    <li class="flex items-center gap-3"><i data-lucide="mail" class="w-4 h-4"></i> info@fairycafe.co.zw
+                    </li>
+                    <li class="flex items-center gap-3"><i data-lucide="map-pin" class="w-4 h-4"></i> 168 Robert Mugabe
+                        Way, Bulawayo</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="text-center pt-10 border-t border-white/5 text-[#777] text-sm italic">
+            <p>&copy; 2026 Fairy Cafe. All rights reserved. Bulawayo’s Premium Taste.</p>
         </div>
     </footer>
 
