--- a/index.html
+++ b/index.html
@@ -103,8 +103,15 @@
             </ul>
         </div>
 
-        <!-- Auth Buttons -->
-        <div class="flex gap-5">
+        <!-- Mobile Menu Toggle -->
+        <div class="md:hidden flex items-center gap-4">
+            <button id="mobile-menu-btn" class="p-2 text-text-dark hover:text-primary-yellow transition-colors">
+                <i data-lucide="menu" class="w-8 h-8"></i>
+            </button>
+        </div>
+
+        <!-- Auth Buttons (Desktop) -->
+        <div class="hidden md:flex gap-5">
             <button
                 class="px-6 py-2.5 rounded-full text-sm font-medium border border-text-dark bg-white text-text-dark hover:bg-bg-light transition-all">Sign
                 In</button>
@@ -112,6 +119,35 @@
                 class="px-6 py-2.5 rounded-full text-sm font-medium bg-primary-yellow text-white shadow-[0_5px_15px_rgba(29,105,27,0.4)] hover:-translate-y-0.5 hover:shadow-[0_8px_18px_rgba(29,105,27,0.6)] transition-all">Login</button>
         </div>
     </nav>
+
+    <!-- Mobile Sidebar -->
+    <div id="mobile-sidebar"
+        class="fixed inset-0 bg-black/60 backdrop-blur-md z-[100] transition-opacity duration-300 opacity-0 invisible">
+        <div
+            class="absolute right-0 top-0 h-full w-[300px] bg-white p-10 flex flex-col transform translate-x-full transition-transform duration-300 ease-in-out shadow-2xl">
+            <button id="close-sidebar" class="self-end p-2 text-text-gray hover:text-text-dark mb-10">
+                <i data-lucide="x" class="w-8 h-8"></i>
+            </button>
+
+            <ul class="flex flex-col gap-6 mb-12">
+                <li><a href="#" class="text-xl font-bold text-text-dark border-b border-gray-100 pb-2 block">Why Fairy
+                        Cafe?</a></li>
+                <li><a href="#about-section"
+                        class="text-xl font-bold text-text-dark border-b border-gray-100 pb-2 block">About</a></li>
+                <li><a href="menu.html"
+                        class="text-xl font-bold text-text-dark border-b border-gray-100 pb-2 block">Full
+                        Menu</a></li>
+            </ul>
+
+            <div class="mt-auto flex flex-col gap-4">
+                <button
+                    class="w-full py-4 rounded-full font-bold border-2 border-text-dark text-text-dark hover:bg-bg-light transition-all">Sign
+                    In</button>
+                <button
+                    class="w-full py-4 rounded-full font-bold bg-primary-yellow text-white shadow-lg hover:bg-text-dark transition-all">Login</button>
+            </div>
+        </div>
+    </div>
 
     <!-- Hero Section -->
     <main class="h-screen relative flex overflow-hidden"
@@ -135,7 +171,7 @@
                     class="inline-block px-4 py-2 border border-primary-yellow/50 rounded-full text-primary-yellow text-sm font-semibold tracking-wide mb-6 bg-black/30 backdrop-blur-sm">
                     Hungry? We got you.
                 </div>
-                <h1 class="text-[56px] md:text-[72px] font-bold leading-[1.1] mb-6 text-text-dark drop-shadow-lg">
+                <h1 class="text-[42px] md:text-[72px] font-bold leading-[1.1] mb-6 text-text-dark drop-shadow-lg">
                     Wait Less, <br>
                     <span class="text-primary-yellow relative inline-block">
                         Eat More
@@ -1088,6 +1124,32 @@
             duration: 0.8,
             stagger: 0.1,
             ease: "power2.out"
+        });
+
+        // Mobile Menu Logic
+        const mobileMenuBtn = document.getElementById('mobile-menu-btn');
+        const closeSidebarBtn = document.getElementById('close-sidebar');
+        const mobileSidebar = document.getElementById('mobile-sidebar');
+        const sidebarContent = mobileSidebar.querySelector('div');
+
+        mobileMenuBtn.addEventListener('click', () => {
+            mobileSidebar.classList.remove('invisible');
+            gsap.to(mobileSidebar, { opacity: 1, duration: 0.3 });
+            gsap.to(sidebarContent, { x: 0, duration: 0.4, ease: "power3.out" });
+        });
+
+        const closeSidebar = () => {
+            gsap.to(sidebarContent, { x: '100%', duration: 0.3, ease: "power3.in" });
+            gsap.to(mobileSidebar, {
+                opacity: 0, duration: 0.3, onComplete: () => {
+                    mobileSidebar.classList.add('invisible');
+                }
+            });
+        };
+
+        closeSidebarBtn.addEventListener('click', closeSidebar);
+        mobileSidebar.addEventListener('click', (e) => {
+            if (e.target === mobileSidebar) closeSidebar();
         });
 
     </script>
