--- a/index.html
+++ b/index.html
@@ -480,24 +480,24 @@
             <!-- Dish 1 -->
             <div
                 class="bg-white rounded-[2rem] overflow-hidden shadow-lg hover:shadow-2xl hover:-translate-y-2 transition-all group cursor-pointer signature-dish opacity-0 translate-y-10">
-                <div class="relative overflow-hidden h-[280px]">
-                    <img src="https://images.unsplash.com/photo-1599307767316-656551ff875c?auto=format&fit=crop&w=600&q=80"
-                        alt="Breakfast Quesadillas"
+                <div class="relative overflow-hidden h-[280px] bg-gray-100">
+                    <img src="https://images.unsplash.com/photo-1504754668076-b74b0ce88d1e?auto=format&fit=crop&w=600&q=80"
+                        alt="Breakfast"
                         class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                     <div
                         class="absolute top-4 right-4 bg-primary-yellow text-white px-4 py-2 rounded-full font-bold text-sm">
                         Best Seller
                     </div>
                 </div>
-                <div class="p-8">
+                <div class="p-8 text-center">
                     <h3 class="text-2xl font-bold text-text-dark mb-3">Breakfast Quesadillas</h3>
                     <p class="text-text-gray text-sm mb-6 leading-relaxed">
                         Filled with fluffy scrambled eggs, melted cheese and tomato, served with soup on the side.
                     </p>
-                    <div class="flex justify-between items-center">
+                    <div class="flex flex-col items-center gap-4">
                         <span class="text-3xl font-bold text-text-dark">$7.00</span>
                         <a href="menu.html"
-                            class="px-6 py-3 bg-text-dark text-white rounded-full hover:bg-primary-yellow hover:text-white transition-colors font-semibold">
+                            class="w-full px-6 py-3 bg-text-dark text-white rounded-full hover:bg-primary-yellow hover:text-white transition-colors font-semibold">
                             Order Now
                         </a>
                     </div>
@@ -516,15 +516,15 @@
                         Chef's Choice
                     </div>
                 </div>
-                <div class="p-8">
+                <div class="p-8 text-center">
                     <h3 class="text-2xl font-bold text-text-dark mb-3">Hungry Man’s Breakfast</h3>
                     <p class="text-text-gray text-sm mb-6 leading-relaxed">
                         2 eggs, country style sausage, bacon, mushrooms, 300g Rump steak and potato wedges.
                     </p>
-                    <div class="flex justify-between items-center">
+                    <div class="flex flex-col items-center gap-4">
                         <span class="text-3xl font-bold text-text-dark">$12.00</span>
                         <a href="menu.html"
-                            class="px-6 py-3 bg-text-dark text-white rounded-full hover:bg-primary-yellow hover:text-white transition-colors font-semibold">
+                            class="w-full px-6 py-3 bg-text-dark text-white rounded-full hover:bg-primary-yellow hover:text-white transition-colors font-semibold">
                             Order Now
                         </a>
                     </div>
@@ -543,15 +543,15 @@
                         Signature
                     </div>
                 </div>
-                <div class="p-8">
+                <div class="p-8 text-center">
                     <h3 class="text-2xl font-bold text-text-dark mb-3">Carnivore Platter</h3>
                     <p class="text-text-gray text-sm mb-6 leading-relaxed">
                         Boerewors, brisket, 1/4 chicken, and 2 pork chops. The ultimate feast for meat lovers.
                     </p>
-                    <div class="flex justify-between items-center">
+                    <div class="flex flex-col items-center gap-4">
                         <span class="text-3xl font-bold text-text-dark">$25.00</span>
                         <a href="menu.html"
-                            class="px-6 py-3 bg-text-dark text-white rounded-full hover:bg-primary-yellow hover:text-white transition-colors font-semibold">
+                            class="w-full px-6 py-3 bg-text-dark text-white rounded-full hover:bg-primary-yellow hover:text-white transition-colors font-semibold">
                             Order Now
                         </a>
                     </div>
