UI: Add glassmorphism card to hero content on mobile for better legibility

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
         <!-- Left Section -->
         <div
-            class="w-full md:w-1/2 pt-52 pb-16 pl-8 md:pl-24 flex flex-col justify-between items-start z-10 h-full box-border relative">
+            class="w-full md:w-1/2 pt-32 md:pt-52 pb-16 px-4 md:pl-24 flex flex-col justify-center md:justify-between items-center md:items-start z-10 h-full box-border relative">
 
             <!-- Squiggle Decoration -->
             <div class="hidden md:block absolute top-1/4 left-20 text-gray-300 -rotate-12 transform opacity-50">
@@ -166,7 +166,8 @@
             </div>
 
             <!-- Hero Text -->
-            <div class="hero-content mt-auto mb-auto z-10">
+            <div
+                class="hero-content mt-auto mb-auto z-10 p-8 md:p-0 bg-white/40 md:bg-transparent backdrop-blur-xl md:backdrop-blur-none rounded-[2.5rem] md:rounded-none border border-white/20 md:border-none shadow-2xl md:shadow-none mx-4 md:mx-0">
                 <div
                     class="inline-block px-4 py-2 border border-primary-yellow/50 rounded-full text-primary-yellow text-sm font-semibold tracking-wide mb-6 bg-black/30 backdrop-blur-sm">
                     Hungry? We got you.
