--- a/index.html
+++ b/index.html
@@ -167,33 +167,36 @@
 
             <!-- Hero Text -->
             <div
-                class="hero-content mt-auto mb-auto z-10 p-8 md:p-0 bg-white/40 md:bg-transparent backdrop-blur-xl md:backdrop-blur-none rounded-[2.5rem] md:rounded-none border border-white/20 md:border-none shadow-2xl md:shadow-none mx-4 md:mx-0">
+                class="hero-content mt-auto mb-auto z-10 flex flex-col items-center md:items-start text-center md:text-left">
                 <div
-                    class="inline-block px-4 py-2 border border-primary-yellow/50 rounded-full text-primary-yellow text-sm font-semibold tracking-wide mb-6 bg-black/30 backdrop-blur-sm">
+                    class="inline-block px-4 py-2 border border-primary-yellow/50 rounded-full text-primary-yellow text-sm font-semibold tracking-wide mb-8 bg-black/40 backdrop-blur-sm shadow-sm">
                     Hungry? We got you.
                 </div>
-                <h1 class="text-[42px] md:text-[72px] font-bold leading-[1.1] mb-6 text-text-dark drop-shadow-lg">
-                    Wait Less, <br>
-                    <span class="text-primary-yellow relative inline-block">
-                        Eat More
-                        <svg class="absolute w-full h-3 -bottom-1 left-0 text-primary-yellow opacity-80"
-                            viewBox="0 0 200 9" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M2.00026 6.99996C58.4239 1.49996 124.996 -3.00004 198.026 3.99996"
-                                stroke="currentColor" stroke-width="3" stroke-linecap="round" />
-                        </svg>
-                    </span>
-                    <br> From the <span class="italic font-light text-text-dark">Grill.</span>
-                </h1>
-                <p class="text-text-dark text-lg md:text-xl font-semibold max-w-md leading-relaxed mb-8 drop-shadow-md">
-                    <span class="text-primary-yellow font-bold">Skip</span> <span
-                        class="text-primary-yellow font-bold">the line</span> at Fairy Cafe. Pre-order your
-                    favorites and pick them up hot and ready.
-                </p>
 
-                <!-- Pricing & CTA -->
+                <!-- Glass Card for Text -->
+                <div
+                    class="p-8 md:p-0 bg-white/40 md:bg-transparent backdrop-blur-xl md:backdrop-blur-none rounded-[2.5rem] md:rounded-none border border-white/20 md:border-none shadow-2xl md:shadow-none mb-10">
+                    <h1 class="text-[42px] md:text-[72px] font-bold leading-[1.1] mb-6 text-text-dark drop-shadow-lg">
+                        Wait Less, <br>
+                        <span class="text-primary-yellow relative inline-block">
+                            Eat More
+                            <svg class="absolute w-full h-3 -bottom-1 left-0 text-primary-yellow opacity-80"
+                                viewBox="0 0 200 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M2.00026 6.99996C58.4239 1.49996 124.996 -3.00004 198.026 3.99996"
+                                    stroke="currentColor" stroke-width="3" stroke-linecap="round" />
+                            </svg>
+                        </span>
+                        <br> From the <span class="italic font-light text-text-dark">Grill.</span>
+                    </h1>
+                    <p
+                        class="text-text-dark text-lg md:text-xl font-semibold max-w-md leading-relaxed drop-shadow-md mx-auto md:mx-0">
+                        <span class="text-primary-yellow font-bold">Skip</span> <span
+                            class="text-primary-yellow font-bold">the line</span> at Fairy Cafe. Pre-order your
+                        favorites and pick them up hot and ready.
+                    </p>
+                </div>
 
-
-                <div class="flex flex-col gap-8">
+                <div class="flex flex-col items-center md:items-start gap-8 w-full">
                     <button
                         class="bg-text-dark text-white p-5 pr-10 rounded-full inline-flex items-center gap-[30px] text-lg font-medium shadow-2xl hover:scale-105 hover:bg-black transition-transform w-fit group">
                         <div
