--- a/menu.html
+++ b/menu.html
@@ -92,12 +92,60 @@
         <div class="flex items-center">
             <img src="logo.png" alt="Fairy Cafe Logo" class="h-10 w-auto object-contain">
         </div>
-        <a href="index.html"
-            class="flex items-center gap-2 text-sm font-medium hover:text-primary-yellow transition-colors group">
-            <i data-lucide="arrow-left" class="w-4 h-4 group-hover:-translate-x-1 transition-transform"></i>
-            Back to Home
-        </a>
+        <div class="flex items-center gap-6">
+            <a href="index.html"
+                class="flex items-center gap-2 text-sm font-medium hover:text-primary-yellow transition-colors group">
+                <i data-lucide="arrow-left" class="w-4 h-4 group-hover:-translate-x-1 transition-transform"></i>
+                Home
+            </a>
+            <button id="open-cart"
+                class="relative p-2 bg-primary-yellow/10 rounded-full hover:bg-primary-yellow/20 transition-all">
+                <i data-lucide="shopping-cart" class="w-5 h-5 text-primary-yellow"></i>
+                <span id="cart-count"
+                    class="absolute -top-1 -right-1 bg-primary-yellow text-white text-[10px] font-bold w-5 h-5 rounded-full flex items-center justify-center border-2 border-white">0</span>
+            </button>
+        </div>
     </nav>
+
+    <!-- Side Cart Drawer -->
+    <div id="cart-drawer"
+        class="fixed inset-0 z-[100] bg-black/40 backdrop-blur-sm opacity-0 invisible transition-all duration-300">
+        <div
+            class="absolute right-0 top-0 h-full w-full md:w-[450px] bg-white shadow-2xl flex flex-col transform translate-x-full transition-transform duration-400 ease-in-out">
+            <div class="p-8 border-b border-gray-100 flex justify-between items-center">
+                <h3 class="text-2xl font-bold flex items-center gap-3">
+                    <i data-lucide="shopping-bag" class="text-primary-yellow"></i>
+                    Your Cart
+                </h3>
+                <button id="close-cart" class="p-2 hover:bg-gray-100 rounded-full transition-all">
+                    <i data-lucide="x" class="w-6 h-6"></i>
+                </button>
+            </div>
+
+            <div id="cart-items" class="flex-grow overflow-y-auto p-8 space-y-6">
+                <!-- Cart items injected via JS -->
+                <div class="text-center py-20 opacity-40">
+                    <i data-lucide="shopping-cart" class="w-16 h-16 mx-auto mb-4"></i>
+                    <p class="italic">Your cart is empty</p>
+                </div>
+            </div>
+
+            <div class="p-8 bg-gray-50 border-t border-gray-100">
+                <div class="flex justify-between items-center mb-6">
+                    <span class="text-text-gray font-medium">Subtotal</span>
+                    <span id="cart-subtotal" class="text-3xl font-bold text-text-dark">$0.00</span>
+                </div>
+                <a href="checkout.html" id="checkout-btn"
+                    class="block w-full py-5 bg-text-dark text-white rounded-full font-bold text-lg text-center hover:bg-primary-yellow transition-all transform hover:-translate-y-1 shadow-xl">
+                    Proceed to Checkout
+                </a>
+                <p class="text-center text-xs text-text-gray mt-4 flex items-center justify-center gap-1">
+                    <i data-lucide="info" class="w-3 h-3"></i>
+                    Bulk orders? Call +263 XX XXX XXXX
+                </p>
+            </div>
+        </div>
+    </div>
 
     <!-- Hero Header -->
     <header class="pt-32 pb-16 px-6 md:px-16 bg-white">
@@ -464,12 +512,19 @@
                     </div>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                         ${cat.items.map(item => `
-                            <div class="bg-white p-6 rounded-[2rem] border border-gray-100 shadow-sm hover:shadow-lg transition-all group menu-item overflow-hidden">
+                            <div class="bg-white p-6 rounded-[2rem] border border-gray-100 shadow-sm hover:shadow-lg transition-all group menu-item overflow-hidden relative">
                                 <div class="flex justify-between items-start mb-2">
-                                    <h4 class="text-lg font-bold group-hover:text-primary-yellow transition-colors leading-tight">${item.name}</h4>
-                                    <span class="text-xl font-bold text-text-dark whitespace-nowrap ml-4">${item.price}</span>
+                                    <h4 class="text-lg font-bold group-hover:text-primary-yellow transition-colors leading-tight pr-4">${item.name}</h4>
+                                    <span class="text-xl font-bold text-text-dark whitespace-nowrap">${item.price}</span>
                                 </div>
-                                <p class="text-text-gray text-sm leading-relaxed">${item.desc}</p>
+                                <p class="text-text-gray text-sm leading-relaxed mb-6">${item.desc}</p>
+                                <button 
+                                    onclick="addToCart('${item.name}', '${item.price}')"
+                                    class="add-item-btn flex items-center justify-center gap-2 w-full py-3 bg-gray-50 text-text-dark rounded-2xl font-bold text-sm hover:bg-primary-yellow hover:text-white transition-all active:scale-95 group-hover:bg-primary-yellow/10"
+                                >
+                                    <i data-lucide="plus" class="w-4 h-4"></i>
+                                    Add to Cart
+                                </button>
                             </div>
                         `).join('')}
                     </div>
@@ -543,11 +598,152 @@
             ScrollTrigger.refresh();
         });
 
+        // Cart Functionality
+        let cart = JSON.parse(localStorage.getItem('fairyCart')) || [];
+
+        const cartDrawer = document.getElementById('cart-drawer');
+        const openCartBtn = document.getElementById('open-cart');
+        const closeCartBtn = document.getElementById('close-cart');
+        const cartItemsContainer = document.getElementById('cart-items');
+        const cartCount = document.getElementById('cart-count');
+        const cartSubtotal = document.getElementById('cart-subtotal');
+        const checkoutBtn = document.getElementById('checkout-btn');
+
+        function toggleCart(open) {
+            if (open) {
+                cartDrawer.classList.remove('invisible');
+                gsap.to(cartDrawer, { opacity: 1, duration: 0.3 });
+                gsap.to(cartDrawer.querySelector('div'), { x: 0, duration: 0.4, ease: "power3.out" });
+                renderCart();
+            } else {
+                gsap.to(cartDrawer.querySelector('div'), { x: '100%', duration: 0.3, ease: "power3.in" });
+                gsap.to(cartDrawer, {
+                    opacity: 0, duration: 0.3, onComplete: () => {
+                        cartDrawer.classList.add('invisible');
+                    }
+                });
+            }
+        }
+
+        openCartBtn.addEventListener('click', () => toggleCart(true));
+        closeCartBtn.addEventListener('click', () => toggleCart(false));
+        cartDrawer.addEventListener('click', (e) => {
+            if (e.target === cartDrawer) toggleCart(false);
+        });
+
+        window.addToCart = function (name, price) {
+            const existingItem = cart.find(item => item.name === name);
+            if (existingItem) {
+                existingItem.quantity += 1;
+            } else {
+                cart.push({ name, price, quantity: 1 });
+            }
+            saveCart();
+            updateCartCount();
+
+            // Subtle feedback
+            const btn = event.currentTarget;
+            btn.innerHTML = '<i data-lucide="check" class="w-4 h-4"></i> Added!';
+            btn.classList.add('bg-primary-yellow', 'text-white');
+            lucide.createIcons();
+            setTimeout(() => {
+                btn.innerHTML = '<i data-lucide="plus" class="w-4 h-4"></i> Add to Cart';
+                btn.classList.remove('bg-primary-yellow', 'text-white');
+                lucide.createIcons();
+            }, 1000);
+        };
+
+        function removeFromCart(index) {
+            cart.splice(index, 1);
+            saveCart();
+            renderCart();
+            updateCartCount();
+        }
+
+        function updateQuantity(index, delta) {
+            cart[index].quantity += delta;
+            if (cart[index].quantity <= 0) {
+                cart.splice(index, 1);
+            }
+            saveCart();
+            renderCart();
+            updateCartCount();
+        }
+
+        function saveCart() {
+            localStorage.setItem('fairyCart', JSON.stringify(cart));
+        }
+
+        function updateCartCount() {
+            const total = cart.reduce((acc, item) => acc + item.quantity, 0);
+            cartCount.innerText = total;
+            if (total === 0) {
+                checkoutBtn.classList.add('opacity-50', 'pointer-events-none');
+            } else {
+                checkoutBtn.classList.remove('opacity-50', 'pointer-events-none');
+            }
+        }
+
+        function renderCart() {
+            if (cart.length === 0) {
+                cartItemsContainer.innerHTML = `
+                    <div class="text-center py-20 opacity-40">
+                        <i data-lucide="shopping-cart" class="w-16 h-16 mx-auto mb-4"></i>
+                        <p class="italic">Your cart is empty</p>
+                    </div>
+                `;
+                cartSubtotal.innerText = '$0.00';
+                lucide.createIcons();
+                return;
+            }
+
+            let subtotal = 0;
+            cartItemsContainer.innerHTML = cart.map((item, index) => {
+                const singlePrice = parseFloat(item.price.replace('$', '').split(' / ')[0]); // Handle range like $2.50 / $3.00
+                const itemTotal = singlePrice * item.quantity;
+                subtotal += itemTotal;
+
+                return `
+                    <div class="flex justify-between items-center gap-4 bg-gray-50 p-5 rounded-[1.5rem] border border-gray-100">
+                        <div class="flex-grow">
+                            <h4 class="font-bold text-sm mb-1">${item.name}</h4>
+                            <span class="text-primary-yellow font-bold">${item.price}</span>
+                        </div>
+                        <div class="flex items-center gap-3">
+                            <div class="flex items-center gap-2 bg-white rounded-full border border-gray-100 p-1">
+                                <button onclick="updateQuantity(${index}, -1)" class="w-6 h-6 flex items-center justify-center hover:bg-gray-100 rounded-full transition-all">-</button>
+                                <span class="text-xs font-bold w-4 text-center">${item.quantity}</span>
+                                <button onclick="updateQuantity(${index}, 1)" class="w-6 h-6 flex items-center justify-center hover:bg-gray-100 rounded-full transition-all">+</button>
+                            </div>
+                            <button onclick="removeFromCart(${index})" class="text-red-400 hover:text-red-600 p-1">
+                                <i data-lucide="trash-2" class="w-4 h-4"></i>
+                            </button>
+                        </div>
+                    </div>
+                `;
+            }).join('');
+
+            cartSubtotal.innerText = `$${subtotal.toFixed(2)}`;
+            lucide.createIcons();
+        }
+
+        // Initialize view
+        updateCartCount();
+
+        // Check for openCart query param
+        const urlParams = new URLSearchParams(window.location.search);
+        if (urlParams.get('openCart') === 'true') {
+            setTimeout(() => toggleCart(true), 500);
+        }
+
         // Smooth Nav
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
+                const href = this.getAttribute('href');
+                if (href === "#") return;
+
                 e.preventDefault();
-                const target = document.querySelector(this.getAttribute('href'));
+                const target = document.querySelector(href);
                 if (target) {
                     window.scrollTo({
                         top: target.offsetTop - 100,
