--- a/index.html
+++ b/index.html
@@ -752,73 +752,75 @@
 
     <!-- Location & Hours -->
     <section class="py-24 px-6 md:px-16 bg-bg-light">
-        <div class="max-w-[1200px] mx-auto grid grid-cols-1 md:grid-cols-2 gap-12">
-            <!-- Location Info -->
-            <div class="bg-white p-10 rounded-[2rem] shadow-lg">
-                <h3 class="text-3xl font-bold text-text-dark mb-8">Visit Us</h3>
-                <div class="space-y-6">
-                    <div class="flex items-start gap-4">
-                        <div
-                            class="w-12 h-12 bg-primary-yellow/10 rounded-full flex items-center justify-center flex-shrink-0">
-                            <i data-lucide="map-pin" class="w-6 h-6 text-primary-yellow"></i>
+        <div class="max-w-[1200px] mx-auto">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-12 mb-12">
+                <!-- Location Info -->
+                <div class="bg-white p-10 rounded-[2rem] shadow-lg">
+                    <h3 class="text-3xl font-bold text-text-dark mb-8">Visit Us</h3>
+                    <div class="space-y-6">
+                        <div class="flex items-start gap-4">
+                            <div
+                                class="w-12 h-12 bg-primary-yellow/10 rounded-full flex items-center justify-center flex-shrink-0">
+                                <i data-lucide="map-pin" class="w-6 h-6 text-primary-yellow"></i>
+                            </div>
+                            <div>
+                                <div class="font-semibold text-text-dark mb-1">Address</div>
+                                <div class="text-text-gray">168 Robert Mugabe Way, Bulawayo<br>Zimbabwe</div>
+                            </div>
                         </div>
-                        <div>
-                            <div class="font-semibold text-text-dark mb-1">Address</div>
-                            <div class="text-text-gray">168 Robert Mugabe Way, Bulawayo<br>Zimbabwe</div>
+                        <div class="flex items-start gap-4">
+                            <div
+                                class="w-12 h-12 bg-primary-yellow/10 rounded-full flex items-center justify-center flex-shrink-0">
+                                <i data-lucide="phone" class="w-6 h-6 text-primary-yellow"></i>
+                            </div>
+                            <div>
+                                <div class="font-semibold text-text-dark mb-1">Phone</div>
+                                <div class="text-text-gray">+263 XX XXX XXXX</div>
+                            </div>
+                        </div>
+                        <div class="flex items-start gap-4">
+                            <div
+                                class="w-12 h-12 bg-primary-yellow/10 rounded-full flex items-center justify-center flex-shrink-0">
+                                <i data-lucide="mail" class="w-6 h-6 text-primary-yellow"></i>
+                            </div>
+                            <div>
+                                <div class="font-semibold text-text-dark mb-1">Email</div>
+                                <div class="text-text-gray">info@fairycafe.co.zw</div>
+                            </div>
                         </div>
                     </div>
-                    <div class="flex items-start gap-4">
-                        <div
-                            class="w-12 h-12 bg-primary-yellow/10 rounded-full flex items-center justify-center flex-shrink-0">
-                            <i data-lucide="phone" class="w-6 h-6 text-primary-yellow"></i>
+                </div>
+
+                <!-- Operating Hours -->
+                <div class="bg-white p-10 rounded-[2rem] shadow-lg">
+                    <h3 class="text-3xl font-bold text-text-dark mb-8">Opening Hours</h3>
+                    <div class="space-y-4">
+                        <div class="flex justify-between items-center py-3 border-b border-gray-100">
+                            <span class="font-semibold text-text-dark">Monday - Friday</span>
+                            <span class="text-text-gray">7:00 AM - 10:00 PM</span>
                         </div>
-                        <div>
-                            <div class="font-semibold text-text-dark mb-1">Phone</div>
-                            <div class="text-text-gray">+263 XX XXX XXXX</div>
+                        <div class="flex justify-between items-center py-3 border-b border-gray-100">
+                            <span class="font-semibold text-text-dark">Saturday</span>
+                            <span class="text-text-gray">8:00 AM - 11:00 PM</span>
                         </div>
-                    </div>
-                    <div class="flex items-start gap-4">
-                        <div
-                            class="w-12 h-12 bg-primary-yellow/10 rounded-full flex items-center justify-center flex-shrink-0">
-                            <i data-lucide="mail" class="w-6 h-6 text-primary-yellow"></i>
+                        <div class="flex justify-between items-center py-3 border-b border-gray-100">
+                            <span class="font-semibold text-text-dark">Sunday</span>
+                            <span class="text-text-gray">8:00 AM - 9:00 PM</span>
                         </div>
-                        <div>
-                            <div class="font-semibold text-text-dark mb-1">Email</div>
-                            <div class="text-text-gray">info@fairycafe.co.zw</div>
+                        <div class="flex justify-between items-center py-3">
+                            <span class="font-semibold text-text-dark">Public Holidays</span>
+                            <span class="text-text-gray">9:00 AM - 8:00 PM</span>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <!-- Operating Hours -->
-            <div class="bg-white p-10 rounded-[2rem] shadow-lg">
-                <h3 class="text-3xl font-bold text-text-dark mb-8">Opening Hours</h3>
-                <div class="space-y-4">
-                    <div class="flex justify-between items-center py-3 border-b border-gray-100">
-                        <span class="font-semibold text-text-dark">Monday - Friday</span>
-                        <span class="text-text-gray">7:00 AM - 10:00 PM</span>
-                    </div>
-                    <div class="flex justify-between items-center py-3 border-b border-gray-100">
-                        <span class="font-semibold text-text-dark">Saturday</span>
-                        <span class="text-text-gray">8:00 AM - 11:00 PM</span>
-                    </div>
-                    <div class="flex justify-between items-center py-3 border-b border-gray-100">
-                        <span class="font-semibold text-text-dark">Sunday</span>
-                        <span class="text-text-gray">8:00 AM - 9:00 PM</span>
-                    </div>
-                    <div class="flex justify-between items-center py-3">
-                        <span class="font-semibold text-text-dark">Public Holidays</span>
-                        <span class="text-text-gray">9:00 AM - 8:00 PM</span>
-                    </div>
-                </div>
-                <div class="mt-8 pt-8 border-t border-gray-100">
-                    <div class="flex gap-4">
-                        <a href="#"
-                            class="flex-1 px-6 py-4 bg-primary-yellow text-text-dark rounded-full font-semibold text-center hover:bg-text-dark hover:text-white transition-colors">
-                            Get Directions
-                        </a>
-                    </div>
-                </div>
+            <!-- Interactive Map -->
+            <div class="w-full h-[450px] rounded-[3rem] overflow-hidden shadow-2xl border-4 border-white">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3744.385351234914!2d28.58334867512965!3d-20.159496781283363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1eb5541629853381%3A0xc6cb5a3d745f6531!2sRobert%20Mugabe%20Way%2C%20Bulawayo!5e0!3m2!1sen!2szw!4v1714041234567!5m2!1sen!2szw"
+                    width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
     </section>
